Updating application into it's own object.

--- a/specifications/config.json
+++ b/specifications/config.json
@@ -3,8 +3,10 @@
     "apiKeyFile": "/path/to/file",
     "apiKeyId": "xxx",
     "apiKeySecret": "xxx",
-    "applicationName": "test",
-    "applicationHref": "https://...",
+  },
+  "application": {
+    "name": "test",
+    "href": "https://..."
   },
   "api": {
 
