adding session configuration
this is used to tell the framework how we handle the cookie that
is used to store the JWT access token

--- a/specifications/config.json
+++ b/specifications/config.json
@@ -46,6 +46,14 @@
         }
       }
     },
+    "session":{
+      "ttl": 3600,
+      "tti": 900,
+      "httpOnly": true,
+      "secure": null,
+      "path": "/",
+      "domain": null
+    },
     "register": {
       "enabled": false,
       "uri": "/register",
