adding /me route

--- a/specifications/config.json
+++ b/specifications/config.json
@@ -113,6 +113,10 @@
       "loginUri": "",
       "forgotUri": "/#/forgot",
       "registerUri": "/#/register"
+    },
+    "me": {
+      "enabled": false,
+      "uri": "/me"
     }
   }
 }
