removing a lingering template path

--- a/specifications/config.json
+++ b/specifications/config.json
@@ -83,8 +83,7 @@
     "verifyEmail": {
       "autoLogin": true,
       "uri": "/verify",
-      "nextUri": "/",
-      "templatePath": "/path/to/template.jade"
+      "nextUri": "/"
     },
     "login": {
       "enabled": false,
