Some fixes to the config spec
Things I found while reconciling this spec with the framework spec,
and what we’ve already written for the config parser in the node sdk

--- a/specifications/config.json
+++ b/specifications/config.json
@@ -64,7 +64,6 @@
       "view": "register"
     },
     "verifyEmail": {
-      "autoLogin": true,
       "uri": "/verify",
       "nextUri": "/",
       "view": "verify"
@@ -84,13 +83,15 @@
     "forgotPassword": {
       "enabled": false,
       "uri": "/forgot",
-      "view": "forgot-password"
+      "view": "forgot-password",
+      "nextUri": "/login?status=forgot"
     },
     "changePassword": {
       "enabled": false,
-      "autoLogin": true,
+      "autoLogin": false,
       "uri": "/change",
-      "nextUri": "/",
+      "nextUri": "/login?status=reset",
+      "errorUri": "/forgot?status=invalid_sptoken",
       "view": "change-password"
     },
     "idSite": {
